# ucas-iclass-checkin

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
.agents/skills/iclass-cli/: SKILL.md
.agents/skills/iclass-cli/agents/: openai.yaml
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
apps/iclass-gui/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.js  vite.config.ts
apps/iclass-gui/src/: App.vue  env.d.ts  main.js  main.ts  style.css
apps/iclass-gui/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/iclass-gui/src-tauri/capabilities/: default.json  desktop.json  mobile.json
apps/iclass-gui/src-tauri/icons/: icon.icns
apps/iclass-gui/src-tauri/src/: automation.rs  commands.rs  desktop.rs  lib.rs  main.rs  models.rs  settings.rs  state.rs  tracing_setup.rs
apps/iclass-gui/src/components/: AppTitleBar.vue  AutoCheckStatusPanel.vue  ErrorDialog.vue  LoginPanel.vue  ProfileSummary.vue  ScheduleBoard.vue  ScheduleDetailSheet.vue  SettingsPanel.vue
apps/iclass-gui/src/composables/: useDesktopWindow.js  useDesktopWindow.ts  usePreferences.js  usePreferences.ts
apps/iclass-gui/src/lib/: datetime.ts  tauri.js  tauri.ts  types.ts
crates/iclass-api/: Cargo.toml
crates/iclass-api/src/: lib.rs
crates/iclass-cli/: Cargo.toml  build.rs  windows-icon.rc
crates/iclass-cli/src/: main.rs
crates/iclass-core/: Cargo.toml
crates/iclass-core/src/: lib.rs
crates/iclass-core/tests/: live_core.rs  mock_flow.rs
crates/iclass-domain/: Cargo.toml
crates/iclass-domain/src/: lib.rs
crates/iclass-gui/: Cargo.toml
crates/iclass-gui/src/: lib.rs
crates/iclass-session/: Cargo.toml
crates/iclass-session/src/: lib.rs
docs/api/: README.md  UCAS-iCLASS.agent-runtime-model.md
docs/design/icon-candidates/: README.md
scripts/: bump-version.ps1  bump-version.py  bump-version.sh  generate-icon-svg.py
