[package]
name = "iclass-api"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
chrono.workspace = true
iclass-domain = { version = "0.1.0", path = "../iclass-domain" }
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url = { workspace = true, features = ["serde"] }
